fixed button text wrap

--- a/src/GetStarted.css
+++ b/src/GetStarted.css
@@ -43,18 +43,19 @@
 button {
     padding: 20px;
     text-align: center;
-    text-wrap: balance;
+    word-wrap: break-word;
+    white-space: normal;
+    overflow: clip;
     text-decoration: none;
     font-weight: bold;
-    /*display: inline-block;*/
     font-size: 1em;
-    margin: 20px 10px;
-    max-width: 100%;
-    /*display: flex;
-    flex-direction: row;*/
+    margin: 10px 20px;
+    min-width: 0;
+    max-width: 225px;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    box-sizing: border-box;
 }
 
 #comInsuranceBtn {
